--- a/Garage2.0/Views/Shared/_Layout.cshtml
+++ b/Garage2.0/Views/Shared/_Layout.cshtml
@@ -42,15 +42,15 @@
 @*                        Member overview
 *@                       
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Members" asp-action="Index"> All Members  </a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Members" asp-action="Index1"> All Members  </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicles List |</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Vehicles" asp-action="Index">Vehicles List </a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Members" asp-action="Index1">Details</a>
-                        </li>
+                        </li>*@
                         </a>  
                         
                     </ul>
