--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -9,7 +9,7 @@
 <h1>List of all Vehicles</h1>
 
 
-<form>
+@*<form>
     <div class="input-group mb-3 mt-3">
         <input type="text" class="form-control" name="title" placeholder="Search on Registration Number..." />
         
@@ -26,7 +26,7 @@
             <button asp-action="FilterType" asp-controller="ParkedVehicles" type="submit" class="btn btn-primary ms-2"><i class=" fa fa-check-square">&emsp;Choose</i></button>
             </div>
     </div>
-</form>
+</form>*@
 <table class="table">
     <thead>
         <tr>
