--- a/Garage2.0/Views/Vehicles/Create.cshtml
+++ b/Garage2.0/Views/Vehicles/Create.cshtml
@@ -58,7 +58,7 @@
                 <div class="form-group">
                 <label asp-for="VehicleTypeEntityId" class="control-label"></label>
                 @*<partial name="_VehicleTypeInput" for="VehicleTypeEntityId" />*@
-                <select class="form-control" asp-for="VehicleTypeEntityId" asp-items="@await service.GenerateVehicleTypes(Model is null? null: Model.VehicleTypeEntityId)">
+                <select class="form-control" asp-for="VehicleTypeEntityId" asp-items="@await service.GetVehiclesType()">
                 @if (Model is null)
                  {
                  <option selected="selected" value="">Choose a type</option>
