--- a/Garage2.0/Views/Vehicles/Edit.cshtml
+++ b/Garage2.0/Views/Vehicles/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Garage2._0.Models.ViewModels
 @model VehicleEditViewModel
-
+@inject IVehicleTypeService service
+@inject IMemberSelectService services
 @{
     ViewData["Title"] = "Edit";
 }
@@ -14,6 +15,17 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+             <div class="form-group">
+                <label asp-for="MemberId" class="control-label"></label>
+            <select class="form-control" asp-for="MemberId" asp-items="@await services.GetMembersAsync()">
+                @if (Model is null)
+                 {
+                 <option selected="selected" value="">Choose ID</option>
+
+                 }
+              </select>       
+              <span asp-validation-for="MemberId" class="text-danger"></span>
+            </div> 
             <div class="form-group">
                 <label asp-for="RegNr" class="control-label"></label>
                 <input asp-for="RegNr" class="form-control" />
@@ -41,15 +53,18 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="Category" class="control-label"></label>
-                <select asp-for="Category" class="form-control"></select>
-                <span asp-validation-for="Category" class="text-danger"></span>
+                <label asp-for="VehicleTypeEntityId" class="control-label"></label>
+                @*<partial name="_VehicleTypeInput" for="VehicleTypeEntityId" />*@
+                <select class="form-control" asp-for="VehicleTypeEntityId" asp-items="@await service.GetVehiclesType()">
+                @if (Model is null)
+                 {
+                 <option selected="selected" value="">Choose a type</option>
+
+                 }
+              </select>
+                <span asp-validation-for="VehicleTypeEntityId" class="text-danger"></span>
             </div>
-              <div class="form-group">
-                <label asp-for="Size" class="control-label"></label>
-                <select asp-for="Size" class="form-control"></select>
-                <span asp-validation-for="Size" class="text-danger"></span>
-            </div>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
